src/emit/snapshots/hebi__emit__tests__for_iter_array.snap
---
source: src/emit/tests.rs
expression: snapshot
---
# Input:
a := [0, 1, 2]
for v in a:
  print v


# Func:
function `main` (registers: 4, length: 56, constants: 6)
.code
  0  | load_smi 0
  2  | store r1
  4  | load_smi 1
  6  | store r2
  8  | load_smi 2
  10 | store r3
  12 | make_list r1 3
  15 | store_global [0]; a
  17 | load_global [0]; a
  19 | load_field [1]; iter
  21 | call0
  22 | store r1
  24 | load r1
  26 | load_field [2]; next
  28 | call0
  29 | store r2
  31 | load r1
  33 | load_field [3]; done
  35 | call0
  36 | not
  37 | jump_if_false 18
  39 | jump 11
  41 | load r1
  43 | load_field [2]; next
  45 | call0
  46 | store r2
  48 | jump_loop 17
  50 | load r2
  52 | print
  53 | jump_loop 12
  55 | return




