src/emit/snapshots/hebi__emit__tests__for_range_0_to_10_inclusive_continue.snap
---
source: src/emit/tests.rs
expression: snapshot
---
# Input:
for i in 0..=10:
  continue


# Func:
function `main` (registers: 3, length: 29, constants: 2)
.code
  0  | load_smi 0
  2  | store r1
  4  | load_smi 10
  6  | store r2
  8  | load r2
  10 | cmp_le r1
  12 | jump_if_false 16
  14 | jump 10
  16 | load_smi 1
  18 | add r1
  20 | store r1
  22 | jump_loop 14
  24 | jump_loop 8
  26 | jump_loop 10
  28 | return




