src/emit/snapshots/hebi__emit__tests__function_with_param.snap
---
source: src/emit/tests.rs
expression: snapshot
---
# Input:
fn test(a):
  print a

test(0)


# Func:
function `test` (registers: 2, length: 5, constants: 0)
.code
  0 | load r1
  2 | print
  3 | load_none
  4 | return



function `main` (registers: 2, length: 16, constants: 2)
.code
  0  | make_fn [0]; <function `test` descriptor>
  2  | store_global [1]; test
  4  | load_global [1]; test
  6  | store r0
  8  | load_smi 0
  10 | store r1
  12 | call r0 1
  15 | return




