src/emit/snapshots/hebi__emit__tests__generator_no_params.snap
---
source: src/emit/tests.rs
expression: snapshot
---
# Input:
fn test():
  yield "a"
  return "b"

test()


# Func:
function `test` (registers: 1, length: 8, constants: 2)
.code
  0 | load_const [0]; a
  2 | yield
  3 | load_const [1]; b
  5 | return
  6 | load_none
  7 | return



function `main` (registers: 0, length: 8, constants: 2)
.code
  0 | make_fn [0]; <function `test` descriptor>
  2 | store_global [1]; test
  4 | load_global [1]; test
  6 | call0
  7 | return




